some fixes based on findbugs report